.contact needed a margin: auto. Fixed alignment issue on desktop version

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -160,6 +160,9 @@ footer .logos {
   width: 9.0625em;
   margin: auto;
 }
+.contact {
+  margin: auto;
+}
 
 @media(min-width: 660px) {
   nav p {
